--- a/codeonlycontext/codeonlycontext.csproj
+++ b/codeonlycontext/codeonlycontext.csproj
@@ -35,6 +35,7 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationFramework" />
     <Reference Include="ShellBrowser, Version=5.2.1.140, Culture=neutral, PublicKeyToken=54688575bb3fe70e, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Program Files\JAM Software\ShellBrowser .Net Edition\bin\ShellBrowser.dll</HintPath>
@@ -59,6 +60,9 @@
     </Compile>
     <Compile Include="EvCustomContextMenu.cs" />
     <Compile Include="Everything.cs" />
+    <Compile Include="FileList2.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="IconHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
