working windowing draw rect, such that we draw only what we see.  Uses handle of scroll to know how many items there can be.
Have also code for transparent rectangle brush, but it is additive and gets darker on each paint, so about to try and determine color to see if I should repaint.

--- a/WindowsFormsApplication4/WindowsFormsApplication4.csproj
+++ b/WindowsFormsApplication4/WindowsFormsApplication4.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Everything.cs" />
     <Compile Include="FileList2.cs">
       <SubType>Component</SubType>
     </Compile>
